# minishell

./: .gitignore  .gitmodules  123  CMakeLists.txt  Makefile  README.md  dsa  sda  test
includes/: get_next_line.h  minishell.h  structer.h
srcs/: main.c
srcs/builtins/: cd.c  echo.c  exit.c  export.c  export_add_var.c  pwd.c  unset.c
srcs/external_functions/: ls.c  main.c  test.h  test_for_functions.c
srcs/get_next_line/: get_next_line.c  get_next_line_utils.c
srcs/parser/: checks.c  dollar.c  dollar_pars_prepare.c  input_validator.c  parser.c  quotes.c  slash_n_process.c
srcs/tests/: test_strarr.c
srcs/tools/: cd.c  cmd_caller.c  cmd_execution.c  coammand_handler.c  command_checker.c  command_handler.c  echo.c  env.c  export.c  parser.c  pipe_utils.c  pwd.c  readline.c  redirect.c  signals.c  strarr.c  structer.c  structer_assists.c  unset.c  utils.c  utils_1.c  utils_2.c
