cmake_minimum_required(VERSION 3.17)
project(minishell C)

set(CMAKE_C_STANDARD 11)
add_definitions("-D BUFFER_SIZE=32")
include_directories(includes)
include_directories(libft/includes)

add_executable(minishell
        includes/get_next_line.h
        includes/minishell.h
        libft/includes/libft.h
        libft/srcs/lists/ft_lstadd_back.c
        libft/srcs/lists/ft_lstadd_front.c
        libft/srcs/lists/ft_lstclear.c
        libft/srcs/lists/ft_lstdelone.c
        libft/srcs/lists/ft_lstiter.c
        libft/srcs/lists/ft_lstlast.c
        libft/srcs/lists/ft_lstmap.c
        libft/srcs/lists/ft_lstnew.c
        libft/srcs/lists/ft_lstsize.c
        libft/srcs/memory/ft_bzero.c
        libft/srcs/memory/ft_calloc.c
        libft/srcs/memory/ft_memccpy.c
        libft/srcs/memory/ft_memchr.c
        libft/srcs/memory/ft_memcmp.c
        libft/srcs/memory/ft_memcpy.c
        libft/srcs/memory/ft_memmove.c
        libft/srcs/memory/ft_memset.c
        libft/srcs/numbers/ft_atoi.c
        libft/srcs/numbers/ft_itoa.c
        libft/srcs/put/ft_putchar_fd.c
        libft/srcs/put/ft_putendl_fd.c
        libft/srcs/put/ft_putnbr_fd.c
        libft/srcs/put/ft_putstr_fd.c
        libft/srcs/strings/ft_split.c
        libft/srcs/strings/ft_strchr.c
        libft/srcs/strings/ft_strdup.c
        libft/srcs/strings/ft_strjoin.c
        libft/srcs/strings/ft_strlcat.c
        libft/srcs/strings/ft_strlcpy.c
        libft/srcs/strings/ft_strlen.c
        libft/srcs/strings/ft_strmapi.c
        libft/srcs/strings/ft_strncmp.c
        libft/srcs/strings/ft_strncpy.c
        libft/srcs/strings/ft_strnstr.c
        libft/srcs/strings/ft_strrchr.c
        libft/srcs/strings/ft_strtrim.c
        libft/srcs/strings/ft_substr.c
        libft/srcs/symbols/ft_isalnum.c
        libft/srcs/symbols/ft_isalpha.c
        libft/srcs/symbols/ft_isascii.c
        libft/srcs/symbols/ft_isdigit.c
        libft/srcs/symbols/ft_isprint.c
        libft/srcs/symbols/ft_isspace.c
        libft/srcs/symbols/ft_tolower.c
        libft/srcs/symbols/ft_toupper.c
        srcs/get_next_line/get_next_line.c
        srcs/get_next_line/get_next_line_utils.c
        srcs/tests/test_strarr.c
        srcs/tools/cd.c
        srcs/tools/echo.c
        srcs/tools/env.c
        srcs/tools/export.c
        srcs/tools/parser.c
        srcs/tools/pwd.c
        srcs/tools/strarr.c
        srcs/tools/unset.c
        srcs/main.c)
