cmake_minimum_required(VERSION 3.17)
project(minishell C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

add_executable(minishell
        includes/minishell.h
        includes/structer.h
        libft/includes/libft.h
        libft/srcs/lists/ft_lstadd_back.c
        libft/srcs/lists/ft_lstadd_front.c
        libft/srcs/lists/ft_lstclear.c
        libft/srcs/lists/ft_lstdelone.c
        libft/srcs/lists/ft_lstiter.c
        libft/srcs/lists/ft_lstlast.c
        libft/srcs/lists/ft_lstmap.c
        libft/srcs/lists/ft_lstnew.c
        libft/srcs/lists/ft_lstsize.c
        libft/srcs/memory/ft_bzero.c
        libft/srcs/memory/ft_calloc.c
        libft/srcs/memory/ft_memccpy.c
        libft/srcs/memory/ft_memchr.c
        libft/srcs/memory/ft_memcmp.c
        libft/srcs/memory/ft_memcpy.c
        libft/srcs/memory/ft_memmove.c
        libft/srcs/memory/ft_memset.c
        libft/srcs/numbers/ft_atoi.c
        libft/srcs/numbers/ft_itoa.c
        libft/srcs/put/ft_putchar_fd.c
        libft/srcs/put/ft_putendl_fd.c
        libft/srcs/put/ft_putnbr_fd.c
        libft/srcs/put/ft_putstr_fd.c
        libft/srcs/strings/ft_split.c
        libft/srcs/strings/ft_strchr.c
        libft/srcs/strings/ft_strdup.c
        libft/srcs/strings/ft_strjoin.c
        libft/srcs/strings/ft_strlcat.c
        libft/srcs/strings/ft_strlcpy.c
        libft/srcs/strings/ft_strlen.c
        libft/srcs/strings/ft_strmapi.c
        libft/srcs/strings/ft_strncmp.c
        libft/srcs/strings/ft_strncpy.c
        libft/srcs/strings/ft_strnstr.c
        libft/srcs/strings/ft_strrchr.c
        libft/srcs/strings/ft_strtrim.c
        libft/srcs/strings/ft_substr.c
        libft/srcs/symbols/ft_isalnum.c
        libft/srcs/symbols/ft_isalpha.c
        libft/srcs/symbols/ft_isascii.c
        libft/srcs/symbols/ft_isdigit.c
        libft/srcs/symbols/ft_isprint.c
        libft/srcs/symbols/ft_isspace.c
        libft/srcs/symbols/ft_tolower.c
        libft/srcs/symbols/ft_toupper.c
        srcs/builtins/cd.c
        srcs/builtins/echo.c
        srcs/builtins/env.c
        srcs/builtins/exit.c
        srcs/builtins/export.c
        srcs/builtins/pwd.c
        srcs/builtins/unset.c
        srcs/parser/checks.c
        srcs/parser/dollar.c
        srcs/parser/dollar_pars_prepare.c
        srcs/parser/parser.c
        srcs/parser/quotes.c
        srcs/parser/slash_n_process.c
        srcs/tools/cmd_caller.c
        srcs/tools/coammand_handler.c
        srcs/tools/command_checker.c
        srcs/tools/readline.c
        srcs/tools/signals.c
        srcs/tools/strarr.c
        srcs/tools/structer.c
        srcs/tools/utils.c
        srcs/main.c)
